--- a/Tutorials/Colby2019/Lab02/Lab02.html
+++ b/Tutorials/Colby2019/Lab02/Lab02.html
@@ -506,11 +506,11 @@ v2</code></pre>
 <li><p>How well does a linear regression represent the relationship?</p></li>
 <li><p>What ocean process(es) might produce this relationship?</p></li>
 </ol></li>
-<li><p>Repeat (a) for two more pairs of variables.</p></li>
+<li><p>Repeat (a) for another pair of variables.</p></li>
 </ol></li>
 <li>Try plotting two more T-S diagrams, each with a different variable represented by the color of the points. Write a couple of sentences describing what these plots tell you about the different waters sampled on the cruises.</li>
 </ol>
-<p><strong>Email me (<a href="mailto:nmayot@bigelow.org">nmayot@bigelow.org</a>) your assignment, including the scripts and figures you made. DUE:mm/dd/yyyy</strong></p>
+<p><strong>Email me (<a href="mailto:nmayot@bigelow.org">nmayot@bigelow.org</a>) your assignment, including the scripts and figures you made. DUE:9/13/2019</strong></p>
 </div>
 
 
