--- a/Tutorials/Colby2019/Lab03/Lab03.html
+++ b/Tutorials/Colby2019/Lab03/Lab03.html
@@ -188,7 +188,7 @@ summary {
 <div id="a1.-importing-data" class="section level2">
 <h2>A1. Importing data</h2>
 <p>We are going to look at some of the discrete data, taken from the Niskin bottles. To do this, we need to create another csv file from the Colby_cruise_data_2012-2017.xlsx sheet like last week. But let’s start by setting our working directory.</p>
-<pre class="r"><code>setwd('C:/Users/nmayot/Documents/PostDoc/teaching supervise/Colby 2019/Rbigelow/Tutorials/Colby2019/Lab3')</code></pre>
+<pre class="r"><code>setwd('C:/Users/nmayot/Documents/PostDoc/teaching supervise/Colby 2019/Rbigelow/Tutorials/Colby2019/Lab03')</code></pre>
 <div id="creating-discrete-data-csv-file" class="section level3">
 <h3>Creating discrete data csv file</h3>
 <ol style="list-style-type: decimal">
@@ -428,9 +428,7 @@ ggplot() +
 <ol style="list-style-type: decimal">
 <li><ol style="list-style-type: lower-alpha">
 <li>Plot a contour plot for different discrete variables. Can you figure out how to change the color scheme?</li>
-<li>Try plotting a station-by-depth contour plot for 1 cruise (instead of station-by-cruise)</li>
-<li>Try plotting a depth-by-cruise contour plot for 1 station.</li>
-<li>Try plotting a contour plot of your choice for a different cruise.</li>
+<li>Plot a contour plot for different depths.</li>
 </ol></li>
 <li>Plot an oceanographic section for different variables from the CTD casts.</li>
 </ol>
